--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,5 +1,6 @@
-
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .font_header {
   font-family: shader-inline, monospace;
