--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 .font_header {
   font-family: shader-inline, monospace;
@@ -24,6 +22,9 @@
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/oswald/v53/TK3IWkUHHAIjg75cFRf3bXL8LICs1_Fv40pKlN4NNSeSASz7FmlWHYg.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* body .dark {
+  background-color: #000000;
 }
 #header {
   height: 35rem;
@@ -79,19 +80,19 @@ hr {
 .animate_nav {
   transition-delay: 10ms;
   transition: ease-in;
-}
+} */
 
 /* Bordures du tableaux */
 
-table td, th {
+/* table td, th {
   border: 2px solid black;
   padding: 4px;
   text-align: left;
-}
+} */
 
 /* Loading page */
 
-#loaderContainer .loader {
+/* #loaderContainer .loader {
   border: 4px solid #f3f3f3;
   border-top: 4px solid #00B8F5;
   border-radius: 50%;
@@ -99,16 +100,16 @@ table td, th {
   height: 70px;
   animation: spin 1s linear infinite;
   margin: 10px auto;
-}
+} */
 
-@keyframes spin {
+/* @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
+} */
 
 /* DashBoard SideBar */
 @media screen and (min-width: 1024px) { /* Minimum lg */
-  aside button:hover {
+  /* aside button:hover {
     box-shadow: 20px;
     border: 2px solid rgba(188, 214, 255, 0.973);
     background-color: rgba(188, 214, 255, 0.973);
@@ -116,7 +117,7 @@ table td, th {
   }
   .aside_btn {
     color: #000000;
-  }
+  } */
 }
 
 /* .aside_btn.active {
