--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -23,9 +23,12 @@
   src: url(https://fonts.gstatic.com/s/oswald/v53/TK3IWkUHHAIjg75cFRf3bXL8LICs1_Fv40pKlN4NNSeSASz7FmlWHYg.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* body .dark {
+
+body .dark {
   background-color: #000000;
 }
+
+/* 
 #header {
   height: 35rem;
   background-image: url('/images/bg-hero-header2.webp');
