--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -27,7 +27,22 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* Colors variables */
 
+:root {
+  --color-bg: #ffffff; /* white */
+  --color-bg-sec: #f3f4f6; /* gray-100 */
+  --color-text: #1f2937; /* gray-800 */
+  --color-accent: #16a34a; /* green-600 */
+  --color-accent-sec: #ffb52a; /* custom orange */
+}
+
+.dark {
+  --color-bg: #1f2937;  /* gray-800 */
+  --color-text: #ffffff;/* white */
+  --color-accent: #16a34a; /* green-600 */
+  --color-accent-sec: #ffb52a; /* custom orange */
+}
 
 #header {
   height: 35rem;
@@ -46,7 +61,7 @@
   background-color: #00B8F5;
 }
 .backgroud_btn_h{
-  background-color: rgb(255, 181, 42);
+  background-color: #ffb52a;
 }
 .green_color_text {
   color: #009444;
