--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,7 @@
 .dark {
   --color-bg: 31 41 55; 
   --color-text: 255 255 255; /* white */
+  --color-bg-sec2: 31 41 55; /* gray-800 */
   --color-accent: 22 163 74; /* green-600 */
   --color-accent-sec: 255 181 42; /* orange perso */
 }
